# convert_bitcoin_formats

./: .gitignore  README.md  auto-py-cfg.json  env.yml  main.py  main.spec  pyproject.toml  setup.py  table_handler.py
convert_format/: __main__.py  pipeline.py  table_handler.py
examples/: Binance Trades.xlsx  Bitfinex Trades .csv  BittrexOrderHistory_2017.csv  CEX Trades.csv  CEX_Trades_1.csv  CEX_Trades_1_with_true_results.xlsx  Exodus - all-txs-2019-03-13_04-58-29.csv  Shapeshift Tx - Sheet1.csv  bit2c-financial-report-2016__1_ (1).xlsx  bit2c-financial-report-2017.xlsx  bit2c-financial-report-2018.xlsx  bit2c-financial-report-2018_new.xlsx  idex_trade_history.csv  ledgers.csv  ledgers_only_trades.csv  lqui.csv  member123_trades_FROM_Mon-Dec-16-2013_TO_Sun-Dec-15-2019_ON_2019-12-15T21-47-19.528Z_edited.csv  shamosh123_trades_FROM_Fri-Dec-25-2015_TO_Tue-Dec-24-2019_ON_2019-12-24T09-36-59.318Z.csv  tradeHistory.csv  trades (1).xlsx  trades-2020-07-08T22_43_21+03_00.csv
