[tool.poetry]
name = "convert_bitcoin_formats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "19.3"
black = "19.10b"
ipython = "^7.13"
matplotlib = "^3.2"
numpy = "^1.18"
pandas = "^1.0"
xlrd = "^1.2"
xlsxwriter = "^1.2"
auto-py-to-exe = "^2.7.1"
pysimplegui = "^4.19.0"
requests = "^2.23.0"
pywin32 = "^228"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
